--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         
         <!-- Published Links -->
         <h3><strong>Published Links</strong></h3>
-        <h4><a href="#" style="color: grey;">Github.io</a></h4>
+        <h4><a href="https://tristinjohnson.github.io/Data-Science-Job-Search/" style="color: grey;">Github.io</a></h4>
         <br>
-        <h4><a href="#" style="color: grey;">Github.com</a></h4>
+        <h4><a href="https://github.com/tristinjohnson/Data-Science-Job-Search" style="color: grey;">Github.com</a></h4>
         <br>
-        <h4><a href="#" style="color: grey;">Zenodo</a></h4>
+        <h4><a href="https://zenodo.org/record/4721994#.YIdgBC1h1AY" style="color: grey;">Zenodo</a></h4>
         <p></p>
 
         <!-- About Me -->
