Updated profile image heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+  <meta name="image" property="og:image" content="style/data-science.png">
   <!-- Google Visualization API -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Archivo+Narrow:400,700" rel="stylesheet" type="text/css">
   <!-- Custom Styling-->
